# CoorsLightEngine

./: README.md
Dependencies/Qt6/lib/: Qt6LabsAnimation.lib  Qt6LabsAnimationd.lib  Qt6LabsFolderListModel.lib  Qt6LabsFolderListModeld.lib  Qt6LabsQmlModels.lib  Qt6LabsQmlModelsd.lib  Qt6LabsSettings.lib  Qt6LabsSettingsd.lib  Qt6LabsSharedImage.lib  Qt6LabsSharedImaged.lib  Qt6LabsWavefrontMesh.lib  Qt6LabsWavefrontMeshd.lib  Qt6PacketProtocol.lib  Qt6PacketProtocold.lib  Qt6Qml.lib  Qt6QmlCompiler.lib  Qt6QmlCompilerd.lib  Qt6QmlCore.lib  Qt6QmlCored.lib  Qt6QmlLocalStorage.lib  Qt6QmlLocalStoraged.lib  Qt6QmlModels.lib  Qt6QmlModelsd.lib  Qt6QmlWorkerScript.lib  Qt6QmlWorkerScriptd.lib  Qt6QmlXmlListModel.lib  Qt6QmlXmlListModeld.lib  Qt6Qmld.lib  Qt6Quick.lib  Qt6QuickControls2.lib  Qt6QuickControls2Impl.lib  Qt6QuickControls2Impld.lib  Qt6QuickControls2d.lib  Qt6QuickDialogs2.lib  Qt6QuickDialogs2QuickImpl.lib  Qt6QuickDialogs2QuickImpld.lib  Qt6QuickDialogs2Utils.lib  Qt6QuickDialogs2Utilsd.lib  Qt6QuickDialogs2d.lib  Qt6QuickLayouts.lib  (+12 more)
Dependencies/Qtadvanceddocking/lib/: qtadvanceddocking.lib  qtadvanceddockingd.lib
Dependencies/SPIRV-Relfect/include/: spirv_reflect.h
Dependencies/VkBootstrap/lib/: Dvk-bootstrap.lib  Rvk-bootstrap.lib
Dependencies/VulkanMemoryAllocator/lib/: VulkanMemoryAllocator.lib
Dependencies/catch2/lib/: Catch2Main.lib  Catch2Maind.lib
Doc/: Libs.docx  Norme.docx
Resources/Editor/Config/: EditorEn.ini  LauncherEN.ini  NewLevelEN.ini  StyleUIEN.ini
Resources/Editor/Models/: Camera.fbx
Resources/Editor/Shaders/: Arrow.frag  Arrow.vert  GridFrag.frag  GridVertex.vert  IdArrow.frag  IdItem.frag  IdItem.vert  LineVertex.vert  MatFrag.frag  MatVertex.vert  ModelFrag.frag  ModelVertex.vert  outline.frag  outline.vert
Resources/Engine/Material/: WorldMaterial.mat
Resources/Engine/Scripts/: BasicCamera.lua  BasicCollision.lua  BasicForces.lua  BasicInput.lua  BasicModel.lua  BasicParticle.lua  BasicRaycast.lua  BasicScene.lua  BasicScriptCommunication1.lua  BasicScriptCommunication2.lua  BasicSound.lua  BasicStartTag.lua  BasicTags.lua  BasicTimer.lua  BasicUI.lua  BasicUI2.lua
Resources/Engine/Shaders/: ModelFrag.frag  ModelVertex.vert  ParticleFrag.frag  ParticleVertex.vert  SkyFrag.frag  SkyVertex.vert  TextFrag.frag  TextVertex.vert  UIFrag.frag  UIVertex.vert  UnlitModelFrag.frag
Sources/Engine/: CmakeLists.txt
Sources/Engine/Editor/: CMakeLists.txt
Sources/Engine/Editor/include/Editor/Core/: EditorApp.h
Sources/Engine/Editor/include/Editor/Data/: ActionIcon.h  Actor.h  ArrowMode.h  Camera.h  FlowLayout.h  NewDocument.h  OrbitalCamera.h  PickingArrow.h  ProjectLocation.h
Sources/Engine/Editor/include/Editor/Nodes/: ColorPicker.h  FloatPicker.h  IntegerPicker.h  MaterialResult.h  ParticleResult.h  TexturePicker.h  UnsignedFloatPicker.h  UnsignedIntegerPicker.h  UnsignedVec3Picker.h  Vec3Picker.h
Sources/Engine/Editor/include/Editor/Resources/Loader/: StyleSheetLoader.h
Sources/Engine/Editor/include/Editor/UI/: Button.h  Image.h  Text.h  UIResource.h
Sources/Engine/Editor/include/Editor/Utils/: Utils.h
Sources/Engine/Editor/include/Editor/Widget/: WidgetBrowserTree.h  WidgetBrowserTreeItem.h  WidgetBrowserTreeModel.h  WidgetClickedLabel.h  WidgetCollapse.h  WidgetCollapseTag.h  WidgetCollapseUI.h  WidgetColor.h  WidgetConsole.h  WidgetContentBrowser.h  WidgetContentBrowserApp.h  WidgetDoubleSpinBox.h  WidgetDropInput.h  WidgetDropTexture.h  WidgetDropUI.h  WidgetEditor.h  WidgetGameApp.h  WidgetGameObjectTree.h  WidgetGameObjectTreeItem.h  WidgetGameObjectTreeModel.h  WidgetInspectorApp.h  WidgetInspectorData.h  WidgetMaterialApp.h  WidgetMenuSperarator.h  WidgetModelViewerApp.h  WidgetNewScene.h  WidgetParticleApp.h  WidgetProjectHub.h  WidgetSceneApp.h  WidgetSceneHierarchyApp.h  WidgetSceneLabel.h  WidgetSelectable.h  WidgetSelectableBrowser.h  WidgetSelectableBrowserMaterial.h  WidgetSelectableBrowserModel.h  WidgetSelectableBrowserParticle.h  WidgetSelectableBrowserPrefab.h  WidgetSelectableBrowserScene.h  WidgetSelectableBrowserUI.h  WidgetSelectableDescription.h  (+9 more)
Sources/Engine/Editor/src/Editor/Core/: EditorApp.cpp
Sources/Engine/Editor/src/Editor/Data/: ActionIcon.cpp  Actor.cpp  Camera.cpp  FlowLayout.cpp  NewDocument.cpp  OrbitalCamera.cpp  PickingArrow.cpp  ProjectLocation.cpp
Sources/Engine/Editor/src/Editor/Nodes/: ColorPicker.cpp  FloatPicker.cpp  IntegerPicker.cpp  MaterialResult.cpp  ParticleResult.cpp  TexturePicker.cpp  UnsignedFloatPicker.cpp  UnsignedIntegerPicker.cpp  UnsignedVec3Picker.cpp  Vec3Picker.cpp
Sources/Engine/Editor/src/Editor/Resources/Loader/: StyleSheetLoader.cpp
Sources/Engine/Editor/src/Editor/UI/: Button.cpp  Image.cpp  Text.cpp  UIResource.cpp
Sources/Engine/Editor/src/Editor/Utils/: Utils.cpp
Sources/Engine/Editor/src/Editor/Widget/: WidgetBrowserTree.cpp  WidgetBrowserTreeItem.cpp  WidgetBrowserTreeModel.cpp  WidgetCollapse.cpp  WidgetCollapseTag.cpp  WidgetCollapseUI.cpp  WidgetColor.cpp  WidgetConsole.cpp  WidgetContentBrowser.cpp  WidgetContentBrowserApp.cpp  WidgetDoubleSpinBox.cpp  WidgetDropInput.cpp  WidgetDropTexture.cpp  WidgetDropUI.cpp  WidgetEditor.cpp  WidgetGameApp.cpp  WidgetGameObjectTree.cpp  WidgetGameObjectTreeItem.cpp  WidgetGameObjectTreeModel.cpp  WidgetInspectorApp.cpp  WidgetInspectorData.cpp  WidgetMaterialApp.cpp  WidgetMenuSperarator.cpp  WidgetModelViewerApp.cpp  WidgetNewScene.cpp  WidgetParticleApp.cpp  WidgetProjectHub.cpp  WidgetSceneApp.cpp  WidgetSceneHierarchyApp.cpp  WidgetSceneLabel.cpp  WidgetSelectable.cpp  WidgetSelectableBrowser.cpp  WidgetSelectableBrowserMaterial.cpp  WidgetSelectableBrowserModel.cpp  WidgetSelectableBrowserParticle.cpp  WidgetSelectableBrowserPrefab.cpp  WidgetSelectableBrowserScene.cpp  WidgetSelectableBrowserUI.cpp  WidgetSelectableDescription.cpp  WidgetSpinBox.cpp  (+8 more)
Sources/Engine/MathsTesting/: CMakeLists.txt
Sources/Engine/MathsTesting/src/: Mat3_UnitTest.cpp  Mat4_UnitTest.cpp  Quaternion_UnitTest.cpp  Vec2_UnitTest.cpp  Vec3_UnitTest.cpp  Vec4_UnitTest.cpp  main.cpp
(+273 files in other folders)
